--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto GitHub</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>Projeto GitHub</h1>
     <h2>Alteração no GitHub</h2>
+    <div class="classe-github"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus veniam rem quibusdam ducimus! Nemo eos error fuga tempora inventore, accusamus sequi quaerat illo, earum non eius ad laudantium voluptatibus vitae?</p></div>
 </body>
 </html>
